--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,13 +14,13 @@ jobs:
   # "build" workflow
   build:
 
-    name: Build and Test Go Application
+    name: Build and Test application
     #The type of runner on which job will run
     runs-on: ubuntu-latest
 
     # steps can run commands, setup tasks or run an action
     steps: 
-      - name: checkout repo
+      - name: checkout repository
         uses: actions/checkout@v2
       - name: Set up Python 3.8
         uses: actions/setup-python@v2
@@ -33,9 +33,9 @@ jobs:
       - name: Heroku deploying stage
         uses: akhileshns/heroku-deploy@v3.12.12 
         with:
-          heroku_api_key: ${{secrets.HEROKU_AUTH_TOKEN}}
           heroku_app_name: ci-me-dice-stage
           heroku_email: "salitomeyo16@gmail.com"
+          heroku_api_key: ${{secrets.HEROKU_AUTH_TOKEN}}
       - name: unit test
         run: |
           python3 -m venv venv
@@ -45,24 +45,10 @@ jobs:
         if: success()
         uses: akhileshns/heroku-deploy@v3.12.12 
         with:
-          heroku_api_key: ${{secrets.HEROKU_AUTH_TOKEN}}
           heroku_app_name: ci-me-dice-production
-          heroku_email: "salitomeyo16@gmail.com"    
-        
-  # "notify" workflow for slack notification
-  notify:
-
-    name: Notify on Slack
-    runs-on: ubuntu-latest
-    # Only run this workflow when "build" workflow succeeds
-    needs: [build]
-
-    # Only run this workflow if it target is main branch on pull_request event
-    if: ${{ github.base_ref == 'main' && github.event_name == 'pull_request' }}
-
-    steps:
-
-      - name: Notify success slack
+          heroku_email: "salitomeyo16@gmail.com"
+          heroku_api_key: ${{secrets.HEROKU_AUTH_TOKEN}}    
+      - name: Success slack notification
         # Pick up events even if the job is success.
         if: success()
         env:
@@ -73,7 +59,7 @@ jobs:
           status: SUCCESS
           color: good
 
-      - name: Notify failure slack
+      - name: Failure slack notification
         if: failure()
         env:
           SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
