--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,25 +29,7 @@ jobs:
       - name: installing requirements
         uses: py-actions/py-dependency-install@v2      
         with:
-          path: "./requirements.txt"
-      - name: Heroku deploying stage
-        uses: akhileshns/heroku-deploy@v3.12.12 
-        with:
-          heroku_app_name: ci-me-dice-stage
-          heroku_email: "salitomeyo16@gmail.com"
-          heroku_api_key: ${{secrets.HEROKU_AUTH_TOKEN}}
-      - name: unit test
-        run: |
-          python3 -m venv venv
-          venv/bin/activate
-          python3 -m pytest -v tests/test_dice.py
-      - name: Heroku deploying production
-        if: success()
-        uses: akhileshns/heroku-deploy@v3.12.12 
-        with:
-          heroku_app_name: ci-me-dice-production
-          heroku_email: "salitomeyo16@gmail.com"
-          heroku_api_key: ${{secrets.HEROKU_AUTH_TOKEN}}    
+          path: "./requirements.txt"   
       - name: Success slack notification
         # Pick up events even if the job is success.
         if: success()
@@ -55,7 +37,7 @@ jobs:
           SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
         uses: voxmedia/github-action-slack-notify-build@v1
         with:
-          channel: ci-me-dice-on-demand-salitomeyo
+          channel_id: C02N53GCWKT
           status: SUCCESS
           color: good
 
@@ -65,6 +47,6 @@ jobs:
           SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
         uses: voxmedia/github-action-slack-notify-build@v1
         with:
-          channel: ci-me-dice-on-demand-salitomeyo
+          channel_id: C02N53GCWKT
           status: FAILED
           color: danger
