--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,6 +30,11 @@ jobs:
         uses: py-actions/py-dependency-install@v2      
         with:
           path: "./requirements.txt"   
+      - name: unit test
+        run: |
+          python3 -m venv venv
+          venv/bin/activate
+          python3 -m pytest -v tests/test_dice.py
       - name: Success slack notification
         # Pick up events even if the job is success.
         if: success()
